Fix dark-mode flashing issue, and enable overflow/scroll for calendar pages

--- a/resources/sass/clean/meta/darkmode.sass
+++ b/resources/sass/clean/meta/darkmode.sass
@@ -64,12 +64,15 @@ html.dark,
 
 
     /* General */
+    #calendar-container #calendar
+        background-color: $bg-content
+
     .public
         &.wrapper
             border-top: 1px solid $bg-content
 
         #calendar-container #calendar
-            background-color: $bg-content
+            background-color: $bg-content !important
 
 
         .card.white
