--- a/resources/sass/custom/calendar.sass
+++ b/resources/sass/custom/calendar.sass
@@ -26,7 +26,7 @@
 
 #calendar-container
     position: relative
-    margin-bottom: 2em
+    margin-bottom: 0em
 
     #calendar
         background-color: white
